--- a/index.html
+++ b/index.html
@@ -137,7 +137,34 @@
                 </div>
             </div>
         </header>
+        <section class="section-whyme">
+            <div class="whyme-bg">
+                <div class="whyme-bg__white"></div>
+                <div class="whyme-bg__beg"></div>
+            </div>
 
+            <div class="whyme container">
+                <div class="whyme-title">
+                    <div class="whyme-title__container">
+                        <h2>Мы работаем быстро </br> и наши отчеты проходят согласование с первого раза</h2>
+                        <p>Над вашим объектом работает целая команда:</br> 3 ГИПа (главных инженеров проектов) с опытом работы от 6 лет и 2 штатных сотрудника для камеральных работ</p>
+                    </div>
+                </div>
+                <img src="assets/img/tv.png" alt="picture">
+                <div class="whyme-list">
+                    <div class="whyme-list__container">
+                        <h3>Вы и Ваши архитекторы получаете:</h3>
+                        <ul class="whyme-list__ul">
+                            <li class="whyme-list__item">Отчет на который на 100% можно положиться</li>
+                            <li class="whyme-list__item">Экономию времени и прогнозируемость сроков</li>
+                            <li class="whyme-list__item">Предварительные результаты сразу на месте</li>
+                        </ul>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
 
 
         <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio sapiente nihil assumenda nesciunt
