--- a/index.html
+++ b/index.html
@@ -77,10 +77,16 @@
 
                         <div class="header-content__offer">
 
-                            <a href="#" class="header-content__offer-btn">
+
+                            <button type="submit" class="header-content__offer-btn">
+                            <img src="assets/img/get offer.svg" alt="offer">
+                            <p>получить коммерческое</p>
+                            </button>
+
+                            <!--  <a href="#" class="header-content__offer-btn">
                                 <img src="assets/img/get offer.svg" alt="offer">
                                 <p>получить коммерческое</p>
-                            </a>
+                          </a> -->
 
                             <div class="header-content__offer-text">
                                 <p>
