--- a/index.html
+++ b/index.html
@@ -275,6 +275,8 @@
 
         </section>
 
+        <a href="#">Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
+
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid pariatur dolorem dignissimos accusantium. Asperiores dicta, quaerat recusandae laudantium maiores beatae, porro consequatur inventore eaque, cupiditate iste corrupti eum distinctio
             velit! Nostrum corporis perspiciatis placeat quidem maxime doloribus similique provident nemo earum, recusandae necessitatibus, illo sequi ea iste nulla, repudiandae ex aut dicta explicabo pariatur cupiditate ratione voluptate iusto porro.
             Fuga! Sequi autem a eos, deleniti accusantium dolores aliquam suscipit debitis aut facilis, quam soluta? Quidem minima aperiam perspiciatis nemo nisi doloremque sunt nam beatae. Non illum ea error rem nisi. Ad, error! Sapiente, esse sit eum,
