--- a/index.html
+++ b/index.html
@@ -180,91 +180,95 @@
                         <p>Выполняем как комплексное обследование, так и отдельные виды работ</p>
                     </div>
 
-                    <div class="services__list">
+                    <div class="services__scrollbar">
+                        <div class="services__scroll-none">
+                            <div class="services__list">
 
-                        <div class="services__item service-card">
+                                <div class="services__item service-card">
 
-                            <div class="service-card__img">
-                                <img src="assets/img/service-1.png" alt="picture">
-                            </div>
+                                    <div class="service-card__img">
+                                        <img src="assets/img/service-1.png" alt="picture">
+                                    </div>
 
-                            <div class="service-card__text">
-                                <h4>Общее обследование</h4>
-                                <p>Экспертиза отдельных конструкций, обмерные работы, определение прочности, расчет несущей способности и т.д.
-                                </p>
-                            </div>
+                                    <div class="service-card__text">
+                                        <h4>Общее обследование</h4>
+                                        <p>Экспертиза отдельных конструкций, обмерные работы, определение прочности, расчет несущей способности и т.д.
+                                        </p>
+                                    </div>
 
 
-                            <div class="service-card__link-more">
-                                <a href="#" target="_blank">
-                                    Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow">
-                                </a>
-                            </div>
+                                    <div class="service-card__link-more">
+                                        <a href="#" target="_blank">
+                                            Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow">
+                                        </a>
+                                    </div>
 
-                        </div>
+                                </div>
 
-                        <div class="services__item service-card">
+                                <div class="services__item service-card">
 
-                            <div class="service-card__img">
-                                <img src="assets/img/service-2.png" alt="picture">
-                            </div>
+                                    <div class="service-card__img">
+                                        <img src="assets/img/service-2.png" alt="picture">
+                                    </div>
 
-                            <div class="service-card__text">
-                                <h4>Тепловизионная съемка</h4>
-                                <p>Исследование системы отопления, вентиляции и кондиционирования, а также оценка энергоэффективности здания</p>
-                            </div>
+                                    <div class="service-card__text">
+                                        <h4>Тепловизионная съемка</h4>
+                                        <p>Исследование системы отопления, вентиляции и кондиционирования, а также оценка энергоэффективности здания</p>
+                                    </div>
 
-                            <div class="service-card__link-more">
-                                <a href="#">Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
-                            </div>
-                        </div>
+                                    <div class="service-card__link-more">
+                                        <a href="#">Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
+                                    </div>
+                                </div>
 
-                        <div class="services__item service-card">
+                                <div class="services__item service-card">
 
-                            <div class="service-card__img">
-                                <img src="assets/img/service-3.png" alt="picture">
-                            </div>
+                                    <div class="service-card__img">
+                                        <img src="assets/img/service-3.png" alt="picture">
+                                    </div>
 
-                            <div class="service-card__text">
-                                <h4>Телеинспекция инженерных сетей</h4>
-                                <p>Цветная телевизионная съемка внутренней поверхности любых протяженных объектов до 250 метров
-                                </p>
-                            </div>
+                                    <div class="service-card__text">
+                                        <h4>Телеинспекция инженерных сетей</h4>
+                                        <p>Цветная телевизионная съемка внутренней поверхности любых протяженных объектов до 250 метров
+                                        </p>
+                                    </div>
 
-                            <div class="service-card__link-more">
-                                <a href="#">Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
-                            </div>
-                        </div>
+                                    <div class="service-card__link-more">
+                                        <a href="#">Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
+                                    </div>
+                                </div>
 
-                        <div class="services__item service-card">
+                                <div class="services__item service-card">
 
-                            <div class="service-card__img">
-                                <img src="assets/img/service-4.jpg" alt="picture">
-                            </div>
+                                    <div class="service-card__img">
+                                        <img src="assets/img/service-4.jpg" alt="picture">
+                                    </div>
 
-                            <div class="service-card__text">
-                                <h4>Тахеометрическая съемка</h4>
-                                <p>Построение чертежей при помощи лазера, который с точностью до микрона определяет расположение объектов в пространстве</p>
-                            </div>
+                                    <div class="service-card__text">
+                                        <h4>Тахеометрическая съемка</h4>
+                                        <p>Построение чертежей при помощи лазера, который с точностью до микрона определяет расположение объектов в пространстве</p>
+                                    </div>
 
-                            <div class="service-card__link-more">
-                                <a href="#">Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
-                            </div>
-                        </div>
+                                    <div class="service-card__link-more">
+                                        <a href="#">Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
+                                    </div>
+                                </div>
 
-                        <div class="services__item service-card">
+                                <div class="services__item service-card">
 
-                            <div class="service-card__img">
-                                <img src="assets/img/service-5.jpg" alt="picture">
-                            </div>
+                                    <div class="service-card__img">
+                                        <img src="assets/img/service-5.jpg" alt="picture">
+                                    </div>
 
-                            <div class="service-card__text">
-                                <h4>Диагностика высотных сооружений</h4>
-                                <p>Оценка состояния антенн и дымовых труб при помощи альпинистов и квадрокоптеров с 30-кратным зумом</p>
-                            </div>
+                                    <div class="service-card__text">
+                                        <h4>Диагностика высотных сооружений</h4>
+                                        <p>Оценка состояния антенн и дымовых труб при помощи альпинистов и квадрокоптеров с 30-кратным зумом</p>
+                                    </div>
 
-                            <div class="service-card__link-more">
-                                <a href="#">Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
+                                    <div class="service-card__link-more">
+                                        <a href="#">Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -275,7 +279,7 @@
 
         </section>
 
-        <a href="#">Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
+
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid pariatur dolorem dignissimos accusantium. Asperiores dicta, quaerat recusandae laudantium maiores beatae, porro consequatur inventore eaque, cupiditate iste corrupti eum distinctio
             velit! Nostrum corporis perspiciatis placeat quidem maxime doloribus similique provident nemo earum, recusandae necessitatibus, illo sequi ea iste nulla, repudiandae ex aut dicta explicabo pariatur cupiditate ratione voluptate iusto porro.
@@ -285,6 +289,8 @@
 
 
     </div>
+
+
 </body>
 
 </html>
