--- a/index.html
+++ b/index.html
@@ -181,7 +181,9 @@
                     </div>
 
                     <div class="services__scrollbar">
-                        <div class="services__scroll-none">
+
+                        <div class="services__notscrollbar">
+
                             <div class="services__list">
 
                                 <div class="services__item service-card">
@@ -199,7 +201,7 @@
 
                                     <div class="service-card__link-more">
                                         <a href="#" target="_blank">
-                                            Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow">
+                                            Подробнее <img src="assets/img/arrow (Stroke).svg" alt="arrow">
                                         </a>
                                     </div>
 
@@ -217,14 +219,14 @@
                                     </div>
 
                                     <div class="service-card__link-more">
-                                        <a href="#">Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
+                                        <a href="#">Подробнее <img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
                                     </div>
                                 </div>
 
                                 <div class="services__item service-card">
 
                                     <div class="service-card__img">
-                                        <img src="assets/img/service-3.png" alt="picture">
+                                        <img src="assets/img/service-3.jpg" alt="picture">
                                     </div>
 
                                     <div class="service-card__text">
@@ -234,7 +236,7 @@
                                     </div>
 
                                     <div class="service-card__link-more">
-                                        <a href="#">Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
+                                        <a href="#">Подробнее <img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
                                     </div>
                                 </div>
 
@@ -250,7 +252,7 @@
                                     </div>
 
                                     <div class="service-card__link-more">
-                                        <a href="#">Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
+                                        <a href="#">Подробнее <img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
                                     </div>
                                 </div>
 
@@ -266,11 +268,12 @@
                                     </div>
 
                                     <div class="service-card__link-more">
-                                        <a href="#">Подробнее<img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
+                                        <a href="#">Подробнее <img src="assets/img/arrow (Stroke).svg" alt="arrow"></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
+
                     </div>
                 </div>
                 <div class="services__progressbar"></div>
@@ -283,9 +286,14 @@
 
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid pariatur dolorem dignissimos accusantium. Asperiores dicta, quaerat recusandae laudantium maiores beatae, porro consequatur inventore eaque, cupiditate iste corrupti eum distinctio
             velit! Nostrum corporis perspiciatis placeat quidem maxime doloribus similique provident nemo earum, recusandae necessitatibus, illo sequi ea iste nulla, repudiandae ex aut dicta explicabo pariatur cupiditate ratione voluptate iusto porro.
-            Fuga! Sequi autem a eos, deleniti accusantium dolores aliquam suscipit debitis aut facilis, quam soluta? Quidem minima aperiam perspiciatis nemo nisi doloremque sunt nam beatae. Non illum ea error rem nisi. Ad, error! Sapiente, esse sit eum,
-            nemo ducimus vero sed reprehenderit ipsa dolorem temporibus facere tempora, dicta est impedit amet inventore commodi aperiam unde ratione qui. Distinctio perferendis dicta dignissimos? Harum a, similique nostrum aliquid eligendi eos. Minus
-            excepturi rem corporis accusantium nobis earum, nostrum tenetur velit magnam veniam! Adipisci quod vitae saepe architecto ullam sit iste exercitationem soluta? Eos.</p>
+            Fuga! Sequi autem a eos, deleniti accusantium dolores aliquam suscipit debitis aut facilis, quam solutaLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid pariatur dolorem dignissimos accusantium. Asperiores dicta, quaerat recusandae
+            laudantium maiores beatae, porro consequatur inventore eaque, cupiditate iste corrupti eum distinctio velit! Nostrum corporis perspiciatis placeat quidem maxime doloribus similique provident nemo earum, recusandae necessitatibus, illo sequi
+            ea iste nulla, repudiandae ex aut dicta explicabo pariatur cupiditate ratione voluptate iusto porro. Fuga! Sequi autem a eos, deleniti accusantium dolores aliquam suscipit debitis aut facilis, quam soluta? Quidem minima aperiam perspiciatis
+            nemo nisi doloremque sunt nam beatae. Non illum ea error rem nisi. Ad, error! Sapiente, esse sit eum, nemo ducimus vero sed reprehenderit ipsa dolorem temporibus facere tempora, dicta est impedit amet inventore commodi aperiam unde ratione
+            qui. Distinctio perferendis dicta dignissimos? Harum a, similique nostrum aliquid eligendi eos. Minus excepturi rem corporis accusantium nobis earum, nostrum tenetur velit magnam veniam! Adipisci quod vitae saepe architecto ullam sit iste
+            exercitationem soluta? Eos? Quidem minima aperiam perspiciatis nemo nisi doloremque sunt nam beatae. Non illum ea error rem nisi. Ad, error! Sapiente, esse sit eum, nemo ducimus vero sed reprehenderit ipsa dolorem temporibus facere tempora,
+            dicta est impedit amet inventore commodi aperiam unde ratione qui. Distinctio perferendis dicta dignissimos? Harum a, similique nostrum aliquid eligendi eos. Minus excepturi rem corporis accusantium nobis earum, nostrum tenetur velit magnam
+            veniam! Adipisci quod vitae saepe architecto ullam sit iste exercitationem soluta? Eos.</p>
 
 
     </div>
