--- a/index.html
+++ b/index.html
@@ -281,6 +281,53 @@
             </div>
 
         </section>
+        <section class="section-steps">
+
+            <div class="steps__header">
+                <div class="steps__container container">
+                    <div class="steps__gradient">
+                        <h2>Мы работаем в комплексе</h2>
+                    </div>
+                    <p>чтобы Вы не тратили время на поиск и организацию множества подрядчиков</p>
+                </div>
+            </div>
+
+            <section class="step-one">
+
+                <div class="step-one__container container">
+
+                    <div class="step-one__slider">
+                        <img src="assets/img/slide_1.jpg" alt="slide">
+                    </div>
+
+                    <div class="step-one__main main-one">
+
+                        <div class="main-one__title">
+                            <span> Шаг №1.</span>
+                            <h4>Подготовительные работы</h4>
+                        </div>
+
+                        <div class="main-one__text">
+                            <p>
+                                Мы осматриваем здание, делаем замеры и проверяем наличие визуально заметных дефектов: трещин, коррозии, повреждения фундамента и т.д.
+                            </p>
+                        </div>
+
+                        <div class="main-one__review">
+                            <div class="main-one__avatar"><img src="assets/img/photo-icon.jpg" alt="avatar"> </div>
+                            <div class="main-one__review-text">
+                                <p class="main-one__review-text_quote">
+                                    “Задача этого этапа получить максимально полное представление о конструкции здания, условиях его эксплуатации и возможных слабых местах“
+                                </p>
+                                <p class="main-one__review-text_name">Алексей, обследователь и главный инженер проектов</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
+
+        </section>
 
 
 
