--- a/index.html
+++ b/index.html
@@ -294,32 +294,41 @@
 
             <section class="step-one">
 
-                <div class="step-one__container container">
+                <div class="step-one__container">
 
                     <div class="step-one__slider">
                         <img src="assets/img/slide_1.jpg" alt="slide">
                     </div>
 
-                    <div class="step-one__main main-one">
+                    <div class="step-one__main ">
+                        <div class="main-one">
 
-                        <div class="main-one__title">
-                            <span> Шаг №1.</span>
-                            <h4>Подготовительные работы</h4>
-                        </div>
+                            <div class="main-one__content">
 
-                        <div class="main-one__text">
-                            <p>
-                                Мы осматриваем здание, делаем замеры и проверяем наличие визуально заметных дефектов: трещин, коррозии, повреждения фундамента и т.д.
-                            </p>
-                        </div>
+                                <div class="main-one__title">
+                                    <span> Шаг №1.</span>
+                                    <h4>Подготовительные работы</h4>
+                                </div>
 
-                        <div class="main-one__review">
-                            <div class="main-one__avatar"><img src="assets/img/photo-icon.jpg" alt="avatar"> </div>
-                            <div class="main-one__review-text">
-                                <p class="main-one__review-text_quote">
-                                    “Задача этого этапа получить максимально полное представление о конструкции здания, условиях его эксплуатации и возможных слабых местах“
-                                </p>
-                                <p class="main-one__review-text_name">Алексей, обследователь и главный инженер проектов</p>
+                                <div class="main-one__text">
+                                    <p>
+                                        Мы осматриваем здание, делаем замеры и проверяем наличие визуально заметных дефектов: трещин, коррозии, повреждения фундамента и т.д.
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="main-one__review">
+
+                                <div class="main-one__avatar"><img src="assets/img/avatar.png" alt="avatar"> </div>
+
+
+
+                                <div class="main-one__review-text">
+                                    <p class="main-one__review-text_quote">
+                                        “Задача этого этапа получить максимально полное представление о конструкции здания, условиях его эксплуатации и возможных слабых местах“
+                                    </p>
+                                    <p class="main-one__review-text_name"><span>Алексей</span>, обследователь и главный инженер проектов</p>
+                                </div>
                             </div>
                         </div>
 
