--- a/index.html
+++ b/index.html
@@ -296,8 +296,19 @@
 
                 <div class="step-one__container">
 
-                    <div class="step-one__slider">
-                        <img src="assets/img/slide_1.jpg" alt="slide">
+                    <div class="step-one__slider slider">
+                        <div class="step-one__slider_item">
+                            <img src="assets/img/slide_1.jpg" alt="slide">
+                        </div>
+                        <div class="step-one__slider_item">
+                            <img src="assets/img/slide_3.jpg" alt="slide">
+                        </div>
+                        <div class="step-one__slider_item">
+                            <img src="assets/img/slide_4.jpg" alt="slide">
+                        </div>
+                        <div class="step-one__slider_item">
+                            <img src="assets/img/slide_2.jpg" alt="slide">
+                        </div>
                     </div>
 
                     <div class="step-one__main ">
@@ -339,22 +350,26 @@
         </section>
 
 
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid pariatur dolorem dignissimos accusantium. Asperiores dicta, quaerat recusandae laudantium maiores beatae, porro consequatur inventore eaque, cupiditate iste corrupti eum distinctio
-            velit! Nostrum corporis perspiciatis placeat quidem maxime doloribus similique provident nemo earum, recusandae necessitatibus, illo sequi ea iste nulla, repudiandae ex aut dicta explicabo pariatur cupiditate ratione voluptate iusto porro.
-            Fuga! Sequi autem a eos, deleniti accusantium dolores aliquam suscipit debitis aut facilis, quam solutaLorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid pariatur dolorem dignissimos accusantium. Asperiores dicta, quaerat recusandae
-            laudantium maiores beatae, porro consequatur inventore eaque, cupiditate iste corrupti eum distinctio velit! Nostrum corporis perspiciatis placeat quidem maxime doloribus similique provident nemo earum, recusandae necessitatibus, illo sequi
-            ea iste nulla, repudiandae ex aut dicta explicabo pariatur cupiditate ratione voluptate iusto porro. Fuga! Sequi autem a eos, deleniti accusantium dolores aliquam suscipit debitis aut facilis, quam soluta? Quidem minima aperiam perspiciatis
-            nemo nisi doloremque sunt nam beatae. Non illum ea error rem nisi. Ad, error! Sapiente, esse sit eum, nemo ducimus vero sed reprehenderit ipsa dolorem temporibus facere tempora, dicta est impedit amet inventore commodi aperiam unde ratione
-            qui. Distinctio perferendis dicta dignissimos? Harum a, similique nostrum aliquid eligendi eos. Minus excepturi rem corporis accusantium nobis earum, nostrum tenetur velit magnam veniam! Adipisci quod vitae saepe architecto ullam sit iste
-            exercitationem soluta? Eos? Quidem minima aperiam perspiciatis nemo nisi doloremque sunt nam beatae. Non illum ea error rem nisi. Ad, error! Sapiente, esse sit eum, nemo ducimus vero sed reprehenderit ipsa dolorem temporibus facere tempora,
-            dicta est impedit amet inventore commodi aperiam unde ratione qui. Distinctio perferendis dicta dignissimos? Harum a, similique nostrum aliquid eligendi eos. Minus excepturi rem corporis accusantium nobis earum, nostrum tenetur velit magnam
-            veniam! Adipisci quod vitae saepe architecto ullam sit iste exercitationem soluta? Eos.</p>
-
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim unde corrupti deserunt consequatur a ut pariatur hic, itaque velit animi voluptatem eveniet sequi! Totam, exercitationem est ea magnam libero quidem! Suscipit earum ut officiis soluta.
+            Dolor id laboriosam nostrum. Neque, quaerat illum? Quo, quas, cumque repellat enim ipsum perferendis aspernatur maiores corporis ut vitae quisquam dolore voluptas expedita. Recusandae, aliquid. Culpa dolor ipsum non officiis ab cum, consequatur
+            blanditiis et illum! Eaque labore neque sapiente quas a, amet aspernatur consequatur facilis quisquam, fuga alias assumenda accusamus, explicabo commodi libero atque. Adipisci, sint! Recusandae velit illo nihil voluptates aut molestias aspernatur
+            ratione aliquam cupiditate! Quos voluptas amet tenetur, corrupti atque, laboriosam nisi quis odit voluptatum architecto debitis quas, dolor nostrum ea. Nam aperiam id non officiis vel earum temporibus modi magni quibusdam, necessitatibus rerum,
+            maxime dolorem, pariatur laborum debitis. Eveniet ea, doloremque tempora quis ut cupiditate quam qui. Possimus, aspernatur maxime. Distinctio laudantium praesentium architecto consequuntur. Eveniet, temporibus reprehenderit cumque saepe praesentium
+            nisi vel sunt natus maxime aliquid necessitatibus blanditiis? Explicabo aliquam quos quia delectus ex, dolores dignissimos est at harum? Nesciunt iure impedit suscipit iusto, fuga corporis, dignissimos eveniet rem nihil labore dolores deserunt
+            perspiciatis! Sit exercitationem numquam libero harum voluptatem ipsa, dolores atque eveniet? Voluptatibus inventore quos excepturi qui? Quibusdam placeat aspernatur porro sunt itaque ad aperiam nobis. Itaque ipsum maxime quisquam, enim, saepe
+            quae laborum sapiente quia aliquam ad fugit voluptates? Quos adipisci obcaecati labore odit omnis vitae. Nemo fugiat ipsam laudantium repudiandae tempora tempore itaque officiis at illum maxime repellendus vel et, numquam a aliquam doloremque!
+            Quibusdam atque reiciendis numquam labore aliquam dolore id voluptatem vitae accusamus. Saepe sunt, nostrum itaque nam autem molestias enim corporis facere alias veritatis ipsa delectus. Velit, libero facilis. Quam, a voluptatem deleniti dignissimos
+            odio aut, obcaecati, eaque deserunt atque quis totam. Ipsum excepturi necessitatibus odio ratione repellendus sunt architecto non, delectus magnam quaerat vel fugiat dignissimos iure eligendi assumenda, doloremque voluptatem maiores amet aliquam
+            ipsam deserunt officiis ab voluptatum adipisci. Quis! Nam, minima numquam exercitationem commodi deserunt, beatae libero quaerat nostrum neque sapiente odio incidunt sunt velit? Vitae adipisci, mollitia voluptates error quidem nesciunt cupiditate
+            ad quos in maiores deserunt nemo! Provident autem rerum, dicta, temporibus hic quos tempore voluptas officiis veniam sit ab beatae esse quis pariatur asperiores, quo ducimus libero architecto molestias ipsa odit? Voluptate obcaecati similique
+            molestiae praesentium. Asperiores eos dolores qui a temporibus, distinctio aut nesciunt et dolorem quaerat illo ea reiciendis esse doloribus minima delectus aperiam laboriosam numquam beatae! Totam fuga ipsa magnam alias, nostrum aperiam.
+            Quis dolorum modi sit deleniti ullam blanditiis amet tempora, rerum voluptatum beatae, officia corporis unde esse. Earum dicta itaque quod fuga adipisci, pariatur, non repellendus ex quae animi sunt vero.</p>
 
     </div>
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="assets/js/slick.min.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
