--- a/index.html
+++ b/index.html
@@ -292,8 +292,7 @@
                 </div>
             </div>
 
-            <section class="step-one">
-
+            <div class="step-one">
                 <div class="step-one__container">
 
                     <div class="step-one__slider slider">
@@ -313,6 +312,7 @@
 
                     <div class="step-one__main ">
                         <div class="main-one">
+                            <div class="main-one__bg"></div>
 
                             <div class="main-one__content">
 
@@ -345,7 +345,101 @@
 
                     </div>
                 </div>
-            </section>
+            </div>
+
+            <div class="step-two">
+                <div class="step-two__container container">
+                    <div class="step-two__header">
+                        <div class="step-two__title">
+                            <span>шаг №2.</span>
+                            <h4>Детальное инструментальное обследование</h4>
+                        </div>
+                        <div class="step-two__text">
+                            <p>Мы понимаем насколько важны сроки и сколько может стоить день задержки. Поэтому Вы никогда не услышите от нас слов “надо подождать пару дней, пока освободится арендное оборудование” - мы укомплектованы всем необходимым</p>
+                        </div>
+
+                    </div>
+                    <div class="step-two__slider">
+                        <div class="step-two__slider-item">
+                            <div class="step-two__slider-bg"></div>
+                            <div class="step-two__slider-img">
+                                <img src="assets/img/slidertwo_item1.png" alt="slide">
+                            </div>
+                            <div class="step-two__slider-title">
+                                <p>Локатор арматуры “Profoscope”</p>
+                            </div>
+                        </div>
+                        <div class="step-two__slider-item">
+                            <div class="step-two__slider-bg"></div>
+                            <div class="step-two__slider-img">
+                                <img src="assets/img/slidertwo_item2.png" alt="slide">
+                            </div>
+                            <div class="step-two__slider-title">
+                                <p>Измеритель прочности бетона “ОНИКС-1”</p>
+                            </div>
+                        </div>
+                        <div class="step-two__slider-item">
+                            <div class="step-two__slider-bg"></div>
+                            <div class="step-two__slider-img">
+                                <img src="assets/img/slidertwo_item3.png" alt="slide">
+                            </div>
+                            <div class="step-two__slider-title">
+                                <p>Прибор ультразвукового действия “ПУЛЬСАР-2”</p>
+                            </div>
+                        </div>
+                        <div class="step-two__slider-item">
+                            <div class="step-two__slider-bg"></div>
+                            <div class="step-two__slider-img">
+                                <img src="assets/img/slidertwo_item4.png" alt="slide">
+                            </div>
+                            <div class="step-two__slider-title">
+                                <p>Измеритель прочности бетона “Молоток Шмидта”
+                                </p>
+                            </div>
+
+                        </div>
+                        <div class="step-two__slider-item">
+                            <div class="step-two__slider-bg"></div>
+                            <div class="step-two__slider-img">
+                                <img src="assets/img/slidertwo_item1.png" alt="slide">
+                            </div>
+                            <div class="step-two__slider-title">
+                                <p>Локатор арматуры “Profoscope”</p>
+                            </div>
+                        </div>
+                        <div class="step-two__slider-item">
+                            <div class="step-two__slider-bg"></div>
+                            <div class="step-two__slider-img">
+                                <img src="assets/img/slidertwo_item2.png" alt="slide">
+                            </div>
+                            <div class="step-two__slider-title">
+                                <p>Измеритель прочности бетона “ОНИКС-1”</p>
+                            </div>
+                        </div>
+                        <div class="step-two__slider-item">
+                            <div class="step-two__slider-bg"></div>
+                            <div class="step-two__slider-img">
+                                <img src="assets/img/slidertwo_item3.png" alt="slide">
+                            </div>
+                            <div class="step-two__slider-title">
+                                <p>Прибор ультразвукового действия “ПУЛЬСАР-2”</p>
+                            </div>
+                        </div>
+                        <div class="step-two__slider-item">
+                            <div class="step-two__slider-bg"></div>
+                            <div class="step-two__slider-img">
+                                <img src="assets/img/slidertwo_item4.png" alt="slide">
+                            </div>
+                            <div class="step-two__slider-title">
+                                <p>Измеритель прочности бетона “Молоток Шмидта”
+                                </p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
 
         </section>
 
@@ -365,11 +459,11 @@
             molestiae praesentium. Asperiores eos dolores qui a temporibus, distinctio aut nesciunt et dolorem quaerat illo ea reiciendis esse doloribus minima delectus aperiam laboriosam numquam beatae! Totam fuga ipsa magnam alias, nostrum aperiam.
             Quis dolorum modi sit deleniti ullam blanditiis amet tempora, rerum voluptatum beatae, officia corporis unde esse. Earum dicta itaque quod fuga adipisci, pariatur, non repellendus ex quae animi sunt vero.</p>
 
-    </div>
+        </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="assets/js/slick.min.js"></script>
-    <script src="assets/js/main.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="assets/js/slick.min.js"></script>
+        <script src="assets/js/main.js"></script>
 </body>
 
 </html>
